package com.example.ePolan.Model.Entities;

public enum DeclarationStatus {
    WAITING,
    REJECTED,
    APPROVED,
    CANCELLED
}
