package com.example.ePolan.Model.Entities;

import jakarta.persistence.Embeddable;


public enum InvitationStatus {
    ARCHIVED,
    ACCEPTED,
    REJECTED,
    WAITING
}
